# SUN-DIC

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  settings.ini  setup.py  test_sundic.ipynb
.github/: dependabot.yml
.github/workflows/: daily_sundic_check.yml  docs.yml  pypi.yml
planar_images/: img_0.tif  img_4.tif
sundic/: copy_examples.py  post_process.py  settings.py  sundic.py  version.py
sundic/docs/: SUN-DIC_Manual.tex  dic_papers.bib
sundic/docs/sections/: 00_comments.tex  01_about.tex  02_installation.tex  03_parameters.tex  04_gui_example.tex  05_api_example.tex  06_theory.tex
sundic/examples/: settings.ini  test_sundic.ipynb
sundic/examples/planar_images/: img_1.tif  img_2.tif  img_3.tif
sundic/gui/: analysisWidget.py  mainWindow.py  resultsWidget.py  roiDefWidget.py  sundic_gui.py
sundic/gui/PyGen Files/: analysisWidget.py  imageSetWidget.py  mainWindow.py  resultsConWidget.py  resultsCutWidget.py  resultsSumWidget.py  resultsWidget.py  roiDefWidget.py  settingsWidget.py
sundic/gui/UI Files/: analysisWidget.ui  imageSetWidget.ui  mainWindow.ui  resultsConWidget.ui  resultsCutWidget.ui  resultsSumWidget.ui  resultsWidget.ui  roiDefWidget.ui  settingsWidget.ui  settings_test.ui
sundic/tests/: daily_test.py
sundic/util/: datafile.py  fast_interp.py  savitsky_golay.py
